--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
       </div>
 
-      <div class="grid-content custom-grid-content">
+      <div class="grid-content custom-grid-content body-background">
           <div ng-class="['ui-animation']" ui-view></div>
       </div>
     </div>
