--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
 
-    <div class="grid-frame vertical knot-container">
+    <div class="grid-frame vertical">
       <div class="grid-content shrink" style="padding: 0;" ng-controller="NavigationCtrl">
         <div class="menu-group dark site-header">
           <div class="menu-group-left">
@@ -45,7 +45,7 @@
         </div>
       </div>
 
-      <div class="grid-content custom-grid-content body-background">
+      <div class="grid-content custom-grid-content">
           <div ng-class="['ui-animation']" ui-view></div>
       </div>
     </div>
