--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
     </div>
 
     <div class="grid-content" data-ng-class="{ 'ksw-content': isLoggedIn }" data-ksw-on-scroll>
-        <div ng-class="['ui-animation']" ui-view></div>
+        <div ng-class="['ui-animation']" ui-view>
+
+        </div>
     </div>
     <div class="footer" data-ng-if="isLoggedIn">
         <a href="#">About</a>
