page reload issue fix

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         </div>
                     </li>
 
-                    <li class="background-color-dark" data-ksw-logged-in-user current-user-photo="{{profilePicture }}">
+                    <li class="background-color-dark" data-ksw-logged-in-user current-user-photo="{{profilePic}}">
                         <zf-action-sheet id="current-user">
                             <a href="#" zf-hard-toggle="current-user" class="action-trigger">
                             </a>
