--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                     <label for="orgName">
                         Organization Email Domain
-                        <input type="text" name="orgName" data-ng-model="org.email"/>
+                        <input type="text" name="orgName" data-ng-model="org.domain"/>
                     </label>
                 <input type="checkbox" data-ng-model="org.isAgreed"/>
                 <label for="">I agree to the <a href="">Terms and Conditions</a></label>
